@@ -17,6 +17,9 @@
  */
 package it.eng.spagobi.commons.utilities;
 
+import static it.eng.spagobi.commons.constants.ConfigurationConstants.SPAGOBI_SPAGOBI_SERVICE_JNDI;
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
@@ -32,6 +35,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Locale.Builder;
 import java.util.Map;
+import java.util.Set;
 import java.util.StringTokenizer;
 
 import org.apache.commons.lang3.StringUtils;
@@ -70,16 +74,11 @@ import it.eng.spagobi.utilities.file.FileUtils;
  */
 public class GeneralUtilities extends SpagoBIUtilities {
 
-	private static transient Logger logger = Logger.getLogger(GeneralUtilities.class);
-
+	private static final Logger LOGGER = Logger.getLogger(GeneralUtilities.class);
 	private static final String PREVIEW_FILE_STORAGE_DIRECTORY = "preview" + File.separatorChar + "images";
-	static private String backEndExtension = "BackEnd";
-	static DecimalFormat decFormat = new DecimalFormat();
-	static DecimalFormatSymbols decSymbols = decFormat.getDecimalFormatSymbols();
-	public static final int MAX_DEFAULT_FILE_5M_SIZE = 5242880;
-	public static final int MAX_DEFAULT_FILE_10M_SIZE = 10485760; // 10 mega byte
-
-	// private static String SPAGOBI_DOMAIN = null;
+	private static final String BACKEND_EXTENSION = "BackEnd";
+	private static final int MAX_DEFAULT_FILE_5M_SIZE = 5242880;
+	private static final int MAX_DEFAULT_FILE_10M_SIZE = 10485760; // 10 mega byte
 
 	/**
 	 * Substitutes the substrings with sintax "${code,bundle}" or "${code}" (in the second case bundle is assumed to be the default value "messages") with the
@@ -90,31 +89,35 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	 * @return The message with the internationalized substrings replaced.
 	 */
 	public static String replaceInternationalizedMessages(String message) {
-		if (message == null)
+		if (message == null) {
 			return null;
+		}
 		int startIndex = message.indexOf("${");
-		if (startIndex == -1)
+		if (startIndex == -1) {
 			return message;
-		else
+		} else {
 			return replaceInternationalizedMessages(message, startIndex);
+		}
 	}
 
 	public static String trim(String s) {
-		if (s != null)
-			if (s.trim().length() == 0)
+		if (s != null) {
+			if (s.trim().length() == 0) {
 				return null;
-			else
+			} else {
 				return s.trim();
+			}
+		}
 		return null;
-
 	}
 
 	private static String replaceInternationalizedMessages(String message, int startIndex) {
-		logger.trace("IN");
+		LOGGER.trace("IN");
 		IMessageBuilder msgBuilder = MessageBuilderFactory.getMessageBuilder();
 		int endIndex = message.indexOf("}", startIndex);
-		if (endIndex == -1 || endIndex < startIndex)
+		if (endIndex == -1 || endIndex < startIndex) {
 			return message;
+		}
 		String toBeReplaced = message.substring(startIndex + 2, endIndex).trim();
 		String key = "";
 		String bundle = "messages";
@@ -123,8 +126,6 @@ public class GeneralUtilities extends SpagoBIUtilities {
 			key = splitted[0].trim();
 			if (splitted.length == 1) {
 				String replacement = msgBuilder.getMessage(key, bundle);
-				// if (!replacement.equalsIgnoreCase(key)) message =
-				// message.replaceAll("${" + toBeReplaced + "}", replacement);
 				if (!replacement.equalsIgnoreCase(key))
 					message = message.replaceAll("\\$\\{" + toBeReplaced + "\\}", replacement);
 			}
@@ -132,16 +133,15 @@ public class GeneralUtilities extends SpagoBIUtilities {
 				if (splitted[1] != null && !splitted[1].trim().equals(""))
 					bundle = splitted[1].trim();
 				String replacement = msgBuilder.getMessage(key, bundle);
-				// if (!replacement.equalsIgnoreCase(key)) message =
-				// message.replaceAll("${" + toBeReplaced + "}", replacement);
 				if (!replacement.equalsIgnoreCase(key))
 					message = message.replaceAll("\\$\\{" + toBeReplaced + "\\}", replacement);
 			}
 		}
 		startIndex = message.indexOf("${", endIndex);
-		if (startIndex != -1)
+		if (startIndex != -1) {
 			message = replaceInternationalizedMessages(message, startIndex);
-		logger.trace("OUT");
+		}
+		LOGGER.trace("OUT");
 		return message;
 	}
 
@@ -154,80 +154,31 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	 * @throws Exception        the exception
 	 * @throws EMFInternalError the EMF internal error
 	 */
-	public static void subsituteBIObjectParametersLovProfileAttributes(BIObject obj, SessionContainer session) throws Exception, EMFInternalError {
-		logger.trace("IN");
-		List biparams = obj.getDrivers();
-		Iterator iterParams = biparams.iterator();
+	public static void subsituteBIObjectParametersLovProfileAttributes(BIObject obj, SessionContainer session)
+			throws Exception {
+		LOGGER.trace("IN");
+		List<BIObjectParameter> biparams = obj.getDrivers();
+		Iterator<BIObjectParameter> iterParams = biparams.iterator();
 		while (iterParams.hasNext()) {
 			// if the param is a Fixed Lov, Make the profile attribute
 			// substitution at runtime
-			BIObjectParameter biparam = (BIObjectParameter) iterParams.next();
+			BIObjectParameter biparam = iterParams.next();
 			Parameter param = biparam.getParameter();
 			ModalitiesValue modVal = param.getModalityValue();
 			if (modVal.getITypeCd().equals(SpagoBIConstants.INPUT_TYPE_FIX_LOV_CODE)) {
 				String value = modVal.getLovProvider();
 				int profileAttributeStartIndex = value.indexOf("${");
 				if (profileAttributeStartIndex != -1) {
-					IEngUserProfile profile = (IEngUserProfile) session.getPermanentContainer().getAttribute(IEngUserProfile.ENG_USER_PROFILE);
-					value = StringUtilities.substituteProfileAttributesInString(value, profile, profileAttributeStartIndex);
+					IEngUserProfile profile = (IEngUserProfile) session.getPermanentContainer()
+							.getAttribute(IEngUserProfile.ENG_USER_PROFILE);
+					value = StringUtilities.substituteProfileAttributesInString(value, profile,
+							profileAttributeStartIndex);
 					biparam.getParameter().getModalityValue().setLovProvider(value);
 				}
 			}
 		}
-		logger.trace("OUT");
+		LOGGER.trace("OUT");
 	}
-
-	/**
-	 * Gets the lov map result.
-	 *
-	 * @param lovs the lovs
-	 *
-	 * @return the lov map result
-	 */
-	/*
-	 * public static String getLovMapResult(Map lovs) { logger.debug("IN"); String toReturn = "<DATA>"; Set keys = lovs.keySet(); Iterator keyIter =
-	 * keys.iterator(); while (keyIter.hasNext()) { String key = (String) keyIter.next(); String lovname = (String) lovs.get(key); String lovResult = ""; try {
-	 * lovResult = getLovResult(lovname); } catch (Exception e) { logger.error("Error while getting result of the lov " + lovname +
-	 * ", the result of the won't be inserted into the response", e); continue; } toReturn = toReturn + "<" + key + ">"; toReturn = toReturn + lovResult;
-	 * toReturn = toReturn + "</" + key + ">"; } toReturn = toReturn + "</DATA>"; logger.debug("OUT:" + toReturn); return toReturn; }
-	 */
-
-	/**
-	 * Gets the lov result.
-	 *
-	 * @param lovLabel the lov label
-	 *
-	 * @return the lov result
-	 *
-	 * @throws Exception the exception
-	 */
-	/*
-	 * public static String getLovResult(String lovLabel) throws Exception { logger.debug("IN"); IModalitiesValueDAO lovDAO =
-	 * DAOFactory.getModalitiesValueDAO(); ModalitiesValue lov = lovDAO.loadModalitiesValueByLabel(lovLabel); String toReturn = getLovResult(lov, null);
-	 * logger.debug("OUT:" + toReturn); return toReturn; }
-	 */
-
-	/**
-	 * Gets the lov result.
-	 *
-	 * @param lovLabel the lov label
-	 * @param profile  the profile
-	 *
-	 * @return the lov result
-	 *
-	 * @throws Exception the exception
-	 */
-	/*
-	 * public static String getLovResult(String lovLabel, IEngUserProfile profile) throws Exception { logger.debug("IN"); IModalitiesValueDAO lovDAO =
-	 * DAOFactory.getModalitiesValueDAO(); ModalitiesValue lov = lovDAO.loadModalitiesValueByLabel(lovLabel); String toReturn = getLovResult(lov, profile);
-	 * logger.debug("OUT" + toReturn); return toReturn; }
-	 */
-
-	/*
-	 * private static String getLovResult(ModalitiesValue lov, IEngUserProfile profile) throws Exception { logger.debug("IN"); if (profile == null) { profile =
-	 * new UserProfile("anonymous"); } String dataProv = lov.getLovProvider(); ILovDetail lovDetail = LovDetailFactory.getLovFromXML(dataProv); String lovResult
-	 * = lovDetail.getLovResult(profile, null, null); logger.debug("OUT:" + lovResult); return lovResult; }
-	 */
 
 	/**
 	 * Creates a new user profile, given his identifier.
@@ -250,7 +201,7 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	 * @return A String with complete HTTP Url
 	 */
 	public static String getSpagoBIProfileBaseUrl(String userId) {
-		logger.debug("IN.Trying to recover spago Adapter HTTP Url. userId=" + userId);
+		LOGGER.debug("Trying to recover Spago Adapter HTTP Url. userId = " + userId);
 		String url = "";
 		String path = "";
 		String adapUrlStr = "";
@@ -262,12 +213,10 @@ public class GeneralUtilities extends SpagoBIUtilities {
 			} else {
 				url = path + adapUrlStr + "?NEW_SESSION=TRUE&" + SsoServiceInterface.USER_ID + "=" + userId;
 			}
-
-			logger.debug("using URL: " + url);
 		} catch (Exception e) {
-			logger.error("Error while recovering complete HTTP Url", e);
+			LOGGER.error("Error while recovering complete HTTP Url", e);
 		}
-		logger.debug("OUT");
+		LOGGER.debug("Using URL: " + url);
 		return url;
 	}
 
@@ -279,59 +228,49 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	public static boolean isSSOEnabled() {
 		boolean toReturn;
 		SingletonConfig config = SingletonConfig.getInstance();
-		String active = config.getConfigValue("SPAGOBI_SSO.ACTIVE");
-		logger.debug("active SSO: " + active);
-		if (active != null && active.equalsIgnoreCase("true")) {
+		String activeSso = config.getConfigValue("SPAGOBI_SSO.ACTIVE");
+		LOGGER.debug("Active SSO: " + activeSso);
+		if (activeSso != null && activeSso.equalsIgnoreCase("true")) {
 			toReturn = true;
 		} else {
 			toReturn = false;
 		}
-		logger.debug("returning " + toReturn);
+		LOGGER.debug("Returning: " + toReturn);
 		return toReturn;
 	}
 
-	/*
-	 * public static String getSpagoBiDomain() { logger.debug("IN"); if (SPAGOBI_DOMAIN == null) { try {
-	 * logger.debug("Trying to recover SpagoBI domain from ConfigSingleton"); ConfigSingleton spagoConfig = ConfigSingleton.getInstance(); SourceBean sbTmp =
-	 * (SourceBean) spagoConfig.getAttribute("SPAGOBI.SPAGOBI_DOMAIN_JNDI_NAME"); if (sbTmp != null) { String jndi = sbTmp.getCharacters(); SPAGOBI_DOMAIN =
-	 * readJndiResource(jndi); } if (SPAGOBI_DOMAIN == null) { logger.debug("SPAGOBI_DOMAIN not set, using the default value "); SPAGOBI_DOMAIN =
-	 * "http://localhost:8080"; } } catch (Exception e) { logger.error("Error while recovering getSpagoBiHost", e); } } logger.debug("OUT:" + SPAGOBI_DOMAIN);
-	 * return SPAGOBI_DOMAIN; }
-	 */
-
 	/**
-	 * Gets the spago adapter http url.
+	 * Gets the Spago Adapter HTTP URL.
 	 *
-	 * @return the spago adapter http url
+	 * @return the Spago Adapter HTTP URL
 	 */
 	public static String getSpagoAdapterHttpUrl() {
-		logger.debug("IN");
+		LOGGER.debug("Getting Spago Adapter HTTP URL");
 		String adapUrlStr = SingletonConfig.getInstance().getConfigValue("SPAGOBI.SPAGO_ADAPTERHTTP_URL");
-		if (adapUrlStr != null)
+		if (adapUrlStr != null) {
 			adapUrlStr = adapUrlStr.trim();
-		logger.debug("OUT:" + adapUrlStr);
+		}
+		LOGGER.debug("Returning: " + adapUrlStr);
 		return adapUrlStr;
 	}
 
 	/**
-	 * Gets the default locale from SpagoBI configuration file, the behaviors is the same of getDefaultLocale() function, with difference that if not finds
-	 * returns null
+	 * Gets the default locale from SpagoBI configuration file, the behaviors is the same of getDefaultLocale() function, with difference that if not finds returns
+	 * null
 	 *
 	 * TODO : merge its behaviour with GetDefaultLocale (not done know cause today is release date). Gets the default locale.
 	 *
 	 * @return the default locale
 	 */
 	public static Locale getStartingDefaultLocale() {
-		logger.trace("IN");
+		LOGGER.trace("Getting starting default locale");
 		Locale locale = null;
 		SingletonConfig config = SingletonConfig.getInstance();
 		String languageConfig = config.getConfigValue("SPAGOBI.LANGUAGE_SUPPORTED.LANGUAGE.default");
 		if (languageConfig != null) {
 			locale = Locale.forLanguageTag(languageConfig);
-			logger.trace("locale set to " + locale);
 		}
-
-		logger.trace("OUT");
+		LOGGER.trace("Locale is: " + locale);
 		return locale;
 	}
 
@@ -341,78 +280,78 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	 * @return the default locale
 	 */
 	public static Locale getDefaultLocale() {
-		logger.trace("IN");
+		LOGGER.trace("Getting default locale");
 		Locale locale = null;
 		try {
-			String defaultLanguageTag = SingletonConfig.getInstance().getConfigValue("SPAGOBI.LANGUAGE_SUPPORTED.LANGUAGE.default");
+			String defaultLanguageTag = SingletonConfig.getInstance()
+					.getConfigValue("SPAGOBI.LANGUAGE_SUPPORTED.LANGUAGE.default");
 			String languageTag = StringUtils.isNotBlank(defaultLanguageTag) ? defaultLanguageTag : "en-US";
-			logger.trace("Default locale found: " + languageTag);
+			LOGGER.trace("Default locale found: " + languageTag);
 			locale = Locale.forLanguageTag(languageTag);
 		} catch (Throwable t) {
 			throw new SpagoBIRuntimeException("Error while getting default locale", t);
 		}
-		logger.debug("OUT:" + locale.toString());
+		LOGGER.debug("Default locale is: " + locale);
 		return locale;
 	}
 
 	public static List<Locale> getSupportedLocales() {
-		logger.trace("IN");
-		List<Locale> toReturn = new ArrayList<Locale>();
-		String supportedLanguages = SingletonConfig.getInstance().getConfigValue("SPAGOBI.LANGUAGE_SUPPORTED.LANGUAGES");
+		LOGGER.trace("Getting supported locales");
+		List<Locale> ret = new ArrayList<>();
+		String supportedLanguages = SingletonConfig.getInstance()
+				.getConfigValue("SPAGOBI.LANGUAGE_SUPPORTED.LANGUAGES");
 		if (StringUtils.isNotBlank(supportedLanguages)) {
 			for (String supportedLanguageTag : supportedLanguages.split(",", -1)) {
 				Locale locale = Locale.forLanguageTag(supportedLanguageTag);
-				logger.trace("Found locale with language = [" + locale.getLanguage() + "] and script = [" + locale.getScript() + "] and country = ["
-						+ locale.getCountry() + "]");
-				toReturn.add(locale);
+				LOGGER.trace("Found locale with language = [" + locale.getLanguage() + "] and script = ["
+						+ locale.getScript() + "] and country = [" + locale.getCountry() + "]");
+				ret.add(locale);
 			}
 
 		} else {
-			logger.error("NO LOCALES CONFIGURED!!!");
+			LOGGER.error("NO LOCALES CONFIGURED!!!");
 		}
-		logger.trace("OUT");
-		return toReturn;
+		LOGGER.trace("Returning supported locales: " + ret);
+		return ret;
 	}
 
 	public static String getCountry(String language) {
-		logger.trace("IN");
+		LOGGER.trace("Getting country for language: " + language);
 		String country = null;
-		List locales = GeneralUtilities.getSupportedLocales();
-		Iterator iter = locales.iterator();
+		List<Locale> locales = GeneralUtilities.getSupportedLocales();
+		Iterator<Locale> iter = locales.iterator();
 		while (iter.hasNext()) {
-			Locale localeTmp = (Locale) iter.next();
+			Locale localeTmp = iter.next();
 			String languageTmp = localeTmp.getLanguage();
 			country = localeTmp.getCountry();
 			if (languageTmp.equals(language)) {
-				logger.trace("OUT:" + country);
-				return country;
+				break;
 			}
 		}
-		logger.trace("OUT:" + country);
+		LOGGER.trace("Country is: " + country);
 		return country;
 	}
 
 	public static String getScript(String language) {
-		logger.trace("IN");
+		LOGGER.trace("Getting script for language: " + language);
 		String script = null;
-		List locales = GeneralUtilities.getSupportedLocales();
-		Iterator iter = locales.iterator();
+		List<Locale> locales = GeneralUtilities.getSupportedLocales();
+		Iterator<Locale> iter = locales.iterator();
 		while (iter.hasNext()) {
-			Locale localeTmp = (Locale) iter.next();
+			Locale localeTmp = iter.next();
 			String languageTmp = localeTmp.getLanguage();
 			if (languageTmp.equals(language)) {
 				script = localeTmp.getScript();
-				logger.trace("OUT:" + script);
-				return script;
+				break;
 			}
 		}
-		logger.trace("OUT:" + script);
+		LOGGER.trace("Script is: " + script);
 		return script;
 	}
 
 	public static JSONArray getSupportedLocalesAsJSONArray() {
-		logger.trace("IN");
-		JSONArray toReturn = new JSONArray();
+		LOGGER.trace("Getting supported locales as JSONArray");
+		JSONArray ret = new JSONArray();
 		try {
 			List<Locale> locales = getSupportedLocales();
 			Iterator<Locale> it = locales.iterator();
@@ -421,43 +360,45 @@ public class GeneralUtilities extends SpagoBIUtilities {
 				JSONObject localeJSON = new JSONObject();
 				localeJSON.put("language", locale.getLanguage());
 				localeJSON.put("country", locale.getCountry());
-				toReturn.put(localeJSON);
+				ret.put(localeJSON);
 			}
 		} catch (Exception e) {
-			logger.error("Error while retrieving supported locales as JSONArray", e);
+			LOGGER.error("Error while retrieving supported locales as JSONArray", e);
 		}
-		logger.trace("OUT");
-		return toReturn;
+		LOGGER.trace("Supported locales as JSONArray: " + ret);
+		return ret;
 	}
 
 	public static Locale getCurrentLocale(RequestContainer requestContainer) {
-		Locale locale = null;
+		LOGGER.trace("Getting current locale from request");
+		Locale ret = null;
 		if (requestContainer != null) {
 			SessionContainer permSession = requestContainer.getSessionContainer().getPermanentContainer();
 			if (permSession != null) {
 				String languageTag = (String) permSession.getAttribute(SpagoBIConstants.AF_LANGUAGE_TAG);
 				if (StringUtils.isNotBlank(languageTag)) {
-					locale = Locale.forLanguageTag(languageTag);
+					ret = Locale.forLanguageTag(languageTag);
 				} else {
 					String language = (String) permSession.getAttribute(SpagoBIConstants.AF_LANGUAGE);
 					String country = (String) permSession.getAttribute(SpagoBIConstants.AF_COUNTRY);
 					String script = (String) permSession.getAttribute(SpagoBIConstants.AF_SCRIPT);
 
-					locale = new Builder().setLanguage(language).setRegion(country).setScript(script).build();
+					ret = new Builder().setLanguage(language).setRegion(country).setScript(script).build();
 				}
 			}
 		}
-		if (locale == null)
-			locale = getDefaultLocale();
-		return locale;
+		if (ret == null) {
+			ret = getDefaultLocale();
+		}
+		LOGGER.trace("Current locale from request: " + ret);
+		return ret;
 	}
 
 	public static String getLocaleDateFormat(SessionContainer permSess) {
-//		String language = (String) permSess.getAttribute("AF_LANGUAGE");
-//		String country = (String) permSess.getAttribute("AF_COUNTRY");
+		LOGGER.debug("Getting locale date format from session");
 		String languageTag = (String) permSess.getAttribute(SpagoBIConstants.AF_LANGUAGE_TAG);
 		// if a particular language is specified take the corrisponding date-format
-		String format = null;
+		String ret = null;
 
 		if (StringUtils.isBlank(languageTag)) {
 
@@ -469,13 +410,13 @@ public class GeneralUtilities extends SpagoBIUtilities {
 			languageTag = locale.toLanguageTag();
 		}
 		if (languageTag != null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-" + languageTag + ".format");
+			ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-" + languageTag + ".format");
 		}
-		if (format == null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.format");
+		if (ret == null) {
+			ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.format");
 		}
-		logger.debug("DATE FORMAT.format:" + format);
-		return format;
+		LOGGER.debug("Locale date format from session: " + ret);
+		return ret;
 
 	}
 
@@ -492,22 +433,25 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	}
 
 	public static String getLocaleDateFormat(Locale locale) {
-		String format = null;
+		LOGGER.debug("Getting date format from locale");
+		String ret = null;
 		// if a particular language is specified take the corrisponding date-format
 		if (locale != null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-" + locale.toLanguageTag() + ".format");
+			ret = SingletonConfig.getInstance()
+					.getConfigValue("SPAGOBI.DATE-FORMAT-" + locale.toLanguageTag() + ".format");
 		}
-		if (format == null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.format");
+		if (ret == null) {
+			ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.format");
 		}
-		logger.debug("DATE FORMAT.format:" + format);
-		return format;
+		LOGGER.debug("Date format from locale: " + ret);
+		return ret;
 
 	}
 
 	public static String getLocaleDateFormatForExtJs(SessionContainer permSess) {
+		LOGGER.debug("Getting date format from locale for ExtJS");
 		String languageTag = (String) permSess.getAttribute(SpagoBIConstants.AF_LANGUAGE_TAG);
-		String format = null;
+		String ret = null;
 
 		if (StringUtils.isBlank(languageTag)) {
 
@@ -520,176 +464,161 @@ public class GeneralUtilities extends SpagoBIUtilities {
 		}
 		// if a particular language is specified take the corrisponding date-format
 		if (languageTag != null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-" + languageTag + ".format");
+			ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-" + languageTag + ".format");
 		}
-		if (format == null) {
-			format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.extJsFormat");
+		if (ret == null) {
+			ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT.extJsFormat");
 		}
-		if (format == null) {
-			logger.warn("Locale date format for ExtJs not found, using d/m/Y as deafult");
-			format = "d/m/Y";
+		if (ret == null) {
+			LOGGER.warn("Locale date format for ExtJs not found, using d/m/Y as default");
+			ret = "d/m/Y";
 		}
-		logger.debug("DATE FORMAT.extJsFormat:" + format);
-		return format;
+		LOGGER.debug("Date format from locale for ExtJS: " + ret);
+		return ret;
 
 	}
 
 	public static String getServerDateFormat() {
-		logger.debug("IN");
-		String format = "dd/MM/yyyy";
-		// if a particular language is specified take the corrisponding date-format
-		format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-SERVER.format");
-
-		logger.debug("OUT");
-		return format;
+		LOGGER.debug("Getting server date format");
+		String ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-SERVER.format");
+		LOGGER.debug("Server date format is: " + ret);
+		return ret;
 	}
 
 	public static String getServerTimeStampFormat() {
-		logger.debug("IN");
-		String format = "dd/MM/yyyy HH:mm:ss";
-		// if a particular language is specified take the corrisponding date-format
-		format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.TIMESTAMP-FORMAT.format");
-
-		logger.debug("OUT");
-		return format;
+		LOGGER.debug("Getting server timestamp format");
+		String ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.TIMESTAMP-FORMAT.format");
+		LOGGER.debug("Server timestamp format is: " + ret);
+		return ret;
 	}
 
 	public static String getServerDateFormatExtJs() {
-		logger.debug("IN");
-		String format = "d/m/Y";
-		// if a particular language is specified take the corrisponding date-format
-		format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-SERVER.extJsFormat");
-
-		logger.debug("OUT");
-		return format;
+		LOGGER.debug("Getting server date format for ExtJS");
+		String ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.DATE-FORMAT-SERVER.extJsFormat");
+		LOGGER.debug("Server date format for ExtJS is: " + ret);
+		return ret;
 	}
 
 	public static String getServerTimestampFormatExtJs() {
-		logger.debug("IN");
-		String format = "d/m/Y H:i:s";
-		// if a particular language is specified take the corrisponding date-format
-		format = SingletonConfig.getInstance().getConfigValue("SPAGOBI.TIMESTAMP-FORMAT.extJsFormat");
-
-		logger.debug("OUT");
-		return format;
+		LOGGER.debug("Getting server timestamp format for ExtJS");
+		String ret = SingletonConfig.getInstance().getConfigValue("SPAGOBI.TIMESTAMP-FORMAT.extJsFormat");
+		LOGGER.debug("Server timestamp format for ExtJS is: " + ret);
+		return ret;
 	}
 
 	public static char getDecimalSeparator(Locale locale) {
+		LOGGER.debug("Getting decimal separator for locale: " + locale);
 		DecimalFormat df = (DecimalFormat) DecimalFormat.getInstance(locale);
 		DecimalFormatSymbols decimalFormatSymbols = df.getDecimalFormatSymbols();
-		logger.debug("IN");
-		char decimals = decimalFormatSymbols.getDecimalSeparator();
+		char ret = decimalFormatSymbols.getDecimalSeparator();
 
-		logger.debug("OUT");
-		return decimals;
+		LOGGER.debug("Decimal separator is: " + ret);
+		return ret;
 	}
 
 	public static char getGroupingSeparator(Locale locale) {
+		LOGGER.debug("Getting grouping separator for locale: " + locale);
 		DecimalFormat df = (DecimalFormat) DecimalFormat.getInstance(locale);
 		DecimalFormatSymbols decimalFormatSymbols = df.getDecimalFormatSymbols();
-		logger.debug("IN");
-		char thousands = decimalFormatSymbols.getGroupingSeparator();
+		char ret = decimalFormatSymbols.getGroupingSeparator();
 
-		logger.debug("OUT");
-		return thousands;
+		LOGGER.debug("Grouping separator for locale is: " + ret);
+		return ret;
 	}
 
 	public static int getTemplateMaxSize() {
-		logger.debug("IN");
-		int toReturn = MAX_DEFAULT_FILE_5M_SIZE;
+		LOGGER.debug("Getting template max size");
+		int ret = MAX_DEFAULT_FILE_5M_SIZE;
 		try {
 			SingletonConfig serverConfig = SingletonConfig.getInstance();
 			String maxSizeStr = serverConfig.getConfigValue("SPAGOBI.TEMPLATE_MAX_SIZE");
 			if (maxSizeStr != null) {
-				logger.debug("Configuration found for max template size: " + maxSizeStr);
-				Integer maxSizeInt = new Integer(maxSizeStr);
-				toReturn = maxSizeInt.intValue();
+				LOGGER.debug("Configuration found for max template size: " + maxSizeStr);
+				ret = Integer.parseInt(maxSizeStr);
 			} else {
-				logger.debug("No configuration found for max template size");
+				LOGGER.debug("No configuration found for max template size");
 			}
 		} catch (Exception e) {
-			logger.error("Error while retrieving max template size", e);
-			logger.debug("Considering default value " + MAX_DEFAULT_FILE_5M_SIZE);
-			toReturn = MAX_DEFAULT_FILE_5M_SIZE;
+			LOGGER.error("Error while retrieving max template size", e);
+			LOGGER.debug("Considering default value " + MAX_DEFAULT_FILE_5M_SIZE);
+			ret = MAX_DEFAULT_FILE_5M_SIZE;
 		}
-		logger.debug("OUT: max size = " + toReturn);
-		return toReturn;
+		LOGGER.debug("Template max size is: " + ret);
+		return ret;
 	}
 
 	public static int getDataSetFileMaxSize() {
-		logger.debug("IN");
+		LOGGER.debug("Getting dataset file max size");
 		int toReturn = MAX_DEFAULT_FILE_10M_SIZE;
 		try {
 			SingletonConfig serverConfig = SingletonConfig.getInstance();
 			String maxSizeStr = serverConfig.getConfigValue("SPAGOBI.DATASET_FILE_MAX_SIZE");
 			if (maxSizeStr != null) {
-				logger.debug("Configuration found for max dataset file size: " + maxSizeStr);
-				Integer maxSizeInt = new Integer(maxSizeStr);
-				toReturn = maxSizeInt.intValue();
+				LOGGER.debug("Configuration found for max dataset file size: " + maxSizeStr);
+				toReturn = Integer.parseInt(maxSizeStr);
 			} else {
-				logger.debug("No configuration found for max dataset file size");
+				LOGGER.debug("No configuration found for max dataset file size");
 			}
 		} catch (Exception e) {
-			logger.error("Error while retrieving max dataset file size", e);
-			logger.debug("Considering default value " + MAX_DEFAULT_FILE_10M_SIZE);
+			LOGGER.error("Error while retrieving max dataset file size", e);
+			LOGGER.debug("Considering default value " + MAX_DEFAULT_FILE_10M_SIZE);
 			toReturn = MAX_DEFAULT_FILE_10M_SIZE;
 		}
-		logger.debug("OUT: max size = " + toReturn);
+		LOGGER.debug("Dataset file max size is: " + toReturn);
 		return toReturn;
 	}
 
 	public static int getGisLayerFileMaxSize() {
-		logger.debug("IN");
-		int toReturn = (2 * MAX_DEFAULT_FILE_10M_SIZE);
+		LOGGER.debug("Getting GIS layer file max size");
+		int ret = (2 * MAX_DEFAULT_FILE_10M_SIZE);
 		try {
 			SingletonConfig serverConfig = SingletonConfig.getInstance();
 			String maxSizeStr = serverConfig.getConfigValue("GIS_LAYER_FILE_MAX_SIZE");
 			if (maxSizeStr != null) {
-				logger.debug("Configuration found for max layer gis file size: " + maxSizeStr);
-				Integer maxSizeInt = new Integer(maxSizeStr);
-				toReturn = maxSizeInt.intValue();
+				LOGGER.debug("Configuration found for max layer gis file size: " + maxSizeStr);
+				ret = Integer.parseInt(maxSizeStr);
 			} else {
-				logger.debug("No configuration found for max layer gis file size");
+				LOGGER.debug("No configuration found for max layer gis file size");
 			}
 		} catch (Exception e) {
-			logger.error("Error while retrieving max dataset file size", e);
-			logger.debug("Considering default value " + (2 * MAX_DEFAULT_FILE_10M_SIZE));
-			toReturn = (2 * MAX_DEFAULT_FILE_10M_SIZE); // 20M
+			LOGGER.error("Error while retrieving max dataset file size", e);
+			LOGGER.debug("Considering default value " + (2 * MAX_DEFAULT_FILE_10M_SIZE));
+			ret = (2 * MAX_DEFAULT_FILE_10M_SIZE); // 20M
 		}
-		logger.debug("OUT: max size = " + toReturn);
-		return toReturn;
+		LOGGER.debug("GIS layer file max size is: " + ret);
+		return ret;
 	}
 
 	public static String getSessionExpiredURL() {
-		logger.debug("IN");
+		LOGGER.debug("Getting session expired URL");
 		String sessionExpiredUrl = null;
 		try {
-			logger.debug("Trying to recover SpagoBI session expired url from ConfigSingleton");
+			LOGGER.debug("Trying to recover SpagoBI session expired url from ConfigSingleton");
 			SingletonConfig spagoConfig = SingletonConfig.getInstance();
 			sessionExpiredUrl = spagoConfig.getConfigValue("SPAGOBI.SESSION_EXPIRED_URL");
 		} catch (Exception e) {
-			logger.error("Error while recovering SpagoBI session expired url", e);
+			LOGGER.error("Error while recovering SpagoBI session expired url", e);
 		}
-		logger.debug("OUT: SpagoBI session expired url is " + sessionExpiredUrl);
+		LOGGER.debug("Session expired URL: " + sessionExpiredUrl);
 		return sessionExpiredUrl;
 	}
 
 	/**
 	 * Returns an url starting with the given base url and adding parameters retrieved by the input parameters map. Each parameter value is encoded using
-	 * URLEncoder.encode(value, "UTF-8");
+	 * URLEncoder.encode(value, StandardCharsets.UTF_8);
 	 *
 	 * @param baseUrl The base url
 	 * @param mapPars The parameters map; those parameters will be added to the base url (values will be encoded using UTF-8 encoding)
 	 * @return an url starting with the given base url and adding parameters retrieved by the input parameters map
 	 */
 	public static String getUrl(String baseUrl, Map mapPars) {
-		logger.debug("IN");
+		LOGGER.debug("Getting URL (???) from " + baseUrl + " base URL and parameters " + mapPars);
 		Assert.assertNotNull(baseUrl, "Base url in input is null");
-		StringBuffer buffer = new StringBuffer();
-		buffer.append(baseUrl);
-		buffer.append(baseUrl.indexOf("?") == -1 ? "?" : "&");
+		StringBuilder sb = new StringBuilder();
+		sb.append(baseUrl);
+		sb.append(baseUrl.indexOf("?") == -1 ? "?" : "&");
 		if (mapPars != null && !mapPars.isEmpty()) {
-			java.util.Set keys = mapPars.keySet();
+			Set keys = mapPars.keySet();
 			Iterator iterKeys = keys.iterator();
 			while (iterKeys.hasNext()) {
 				String key = iterKeys.next().toString();
@@ -698,7 +627,7 @@ public class GeneralUtilities extends SpagoBIUtilities {
 					String value = valueObj.toString();
 					// encoding value
 					try {
-						value = URLEncoder.encode(value, "UTF-8");
+						value = URLEncoder.encode(value, UTF_8.name());
 
 						// put all + to space! that is because
 						// otherwise %2B (encoding of plus) and + (substitution of white space in an url)
@@ -707,20 +636,20 @@ public class GeneralUtilities extends SpagoBIUtilities {
 						// value = value.replaceAll(Pattern.quote("+") , " ");
 
 					} catch (UnsupportedEncodingException e) {
-						logger.warn("UTF-8 encoding is not supported!!!", e);
-						logger.warn("Using system encoding...");
+						LOGGER.warn("UTF-8 encoding is not supported!!!", e);
+						LOGGER.warn("Using system encoding...");
 						value = URLEncoder.encode(value);
 					}
 
-					buffer.append(key + "=" + value);
+					sb.append(key + "=" + value);
 					if (iterKeys.hasNext()) {
-						buffer.append("&");
+						sb.append("&");
 					}
 				}
 			}
 		}
-		logger.debug("OUT: " + buffer.toString());
-		return buffer.toString();
+		LOGGER.debug("URL is: " + sb);
+		return sb.toString();
 	}
 
 	/**
@@ -731,13 +660,13 @@ public class GeneralUtilities extends SpagoBIUtilities {
 	 */
 
 	public static Map getParametersFromURL(String urlString) {
-		logger.debug("IN");
-		Map toReturn = new HashMap<String, String>();
+		LOGGER.debug("Getting parameters from URL: " + urlString);
+		Map<String, Object> ret = new HashMap<>();
 		URL url;
 		try {
 			url = new URL(urlString);
 		} catch (MalformedURLException e) {
-			logger.error("Malformed URL Exception " + urlString, e);
+			LOGGER.error("Malformed URL Exception " + urlString, e);
 			return null;
 		}
 		// get parameters string
@@ -754,40 +683,42 @@ public class GeneralUtilities extends SpagoBIUtilities {
 
 			// do the decode
 			try {
-				parameterValue = URLDecoder.decode(parameterValueEncoded, "UTF-8");
+				parameterValue = URLDecoder.decode(parameterValueEncoded, UTF_8.name());
 			} catch (UnsupportedEncodingException e) {
-				logger.error("Error in decoding parameter: UTF 8 not supported " + parameterName + "; use preceding value " + parameterValueEncoded, e);
+				LOGGER.error("Error in decoding parameter: UTF 8 not supported " + parameterName
+						+ "; use preceding value " + parameterValueEncoded, e);
 				parameterValue = parameterValueEncoded;
 			} catch (java.lang.IllegalArgumentException e) { // can happen when in document composition a '%' char is given
-				logger.warn("Error in decoding parameter, illegal argument for " + parameterName + " (probably value % is present); use preceding value "
-						+ parameterValueEncoded);
+				LOGGER.warn("Error in decoding parameter, illegal argument for " + parameterName
+						+ " (probably value % is present); use preceding value " + parameterValueEncoded);
 				parameterValue = parameterValueEncoded;
 			} catch (Exception e) {
-				logger.warn("Generic Error in decoding parameter " + parameterName + " ; use preceding value " + parameterValueEncoded);
+				LOGGER.warn("Generic Error in decoding parameter " + parameterName + " ; use preceding value "
+						+ parameterValueEncoded);
 				parameterValue = parameterValueEncoded;
 			}
 
 			// if is already present create a list
-			if (toReturn.keySet().contains(parameterName)) {
-				Object prevValue = toReturn.get(parameterName).toString();
+			if (ret.keySet().contains(parameterName)) {
+				Object prevValue = ret.get(parameterName).toString();
 				List<String> toInsert = null;
 				// if was alrady a list
 				if (prevValue instanceof List) {
 					toInsert = (List<String>) prevValue;
 					toInsert.add(parameterValue);
 				} else { // else create a new list and add both elements
-					toInsert = new ArrayList<String>();
+					toInsert = new ArrayList<>();
 					toInsert.add(prevValue.toString());
 					toInsert.add(parameterValue);
 				}
 				// put list
-				toReturn.put(parameterName, toInsert);
+				ret.put(parameterName, toInsert);
 			} else { // case single value
-				toReturn.put(parameterName, parameterValue);
+				ret.put(parameterName, parameterValue);
 			}
 		}
-		logger.debug("OUT");
-		return toReturn;
+		LOGGER.debug("Map is: " + ret);
+		return ret;
 	}
 
 	public static int getDatasetMaxResults() {
@@ -796,8 +727,9 @@ public class GeneralUtilities extends SpagoBIUtilities {
 		if (maxResultsStr != null) {
 			maxResults = Integer.parseInt(maxResultsStr);
 		} else {
-			logger.warn("Dataset max results configuration not found. Check spagobi.xml, SPAGOBI.DATASET.maxResults attribute");
-			logger.debug("Using default value that is Integer.MAX_VALUE = " + Integer.MAX_VALUE);
+			LOGGER.warn(
+					"Dataset max results configuration not found. Check spagobi.xml, SPAGOBI.DATASET.maxResults attribute");
+			LOGGER.debug("Using default value that is Integer.MAX_VALUE = " + Integer.MAX_VALUE);
 		}
 		return maxResults;
 	}
@@ -809,8 +741,7 @@ public class GeneralUtilities extends SpagoBIUtilities {
 		} else {
 			resourcePath += File.separatorChar + PREVIEW_FILE_STORAGE_DIRECTORY;
 		}
-		File file = FileUtils.checkAndCreateDir(resourcePath);
-		return file;
+		return FileUtils.checkAndCreateDir(resourcePath);
 	}
 
 	/**
@@ -824,26 +755,26 @@ public class GeneralUtilities extends SpagoBIUtilities {
 		if (res != null) {
 			return res;
 		}
-		logger.warn("No params default values found on dataSet. I try from db.");
+		LOGGER.warn("No params default values found on dataSet. I try from db.");
 
 		// res=null, load dataset from persistence
 		try {
 			String label = dataSet.getLabel();
 			if (label == null) {
-				logger.warn("Label not found -> no default values from database");
+				LOGGER.warn("Label not found -> no default values from database");
 				return null;
 			}
 
 			IDataSetDAO dsDAO = DAOFactory.getDataSetDAO();
 			IDataSet ds = dsDAO.loadDataSetByLabel(label);
 			if (ds == null) {
-				logger.warn("Dataset not found -> no default values from database");
+				LOGGER.warn("Dataset not found -> no default values from database");
 				return null;
 			}
 
 			res = DataSetUtilities.getParamsDefaultValues(ds);
 		} catch (Exception e) {
-			logger.warn("Default parameters values can't be retrieved from dataSet db.", e);
+			LOGGER.warn("Default parameters values can't be retrieved from dataSet db.", e);
 		}
 
 		return res;
@@ -865,20 +796,21 @@ public class GeneralUtilities extends SpagoBIUtilities {
 			}
 			return propertyValue;
 		} catch (Throwable t) {
-			throw new SpagoBIRuntimeException("An unexpected exception occured while loading spagobi property [" + propertyName + "]", t);
+			throw new SpagoBIRuntimeException(
+					"An unexpected exception occured while loading spagobi property [" + propertyName + "]", t);
 		}
 	}
 
 	public static String getExternalEngineUrl(Engine eng) {
-		logger.debug("IN");
+		LOGGER.debug("IN");
 		// in case there is a Secondary URL, use it
 		String urlEngine = eng.getSecondaryUrl();
 		if (urlEngine == null || urlEngine.trim().equals("")) {
-			logger.debug("Secondary url is not defined for engine " + eng.getLabel() + "; main url will be used.");
+			LOGGER.debug("Secondary url is not defined for engine " + eng.getLabel() + "; main url will be used.");
 			// in case there is not a Secondary URL, use the main url
 			urlEngine = eng.getUrl();
 		}
-		logger.debug("Engine url is " + urlEngine);
+		LOGGER.debug("Engine url is " + urlEngine);
 		Assert.assertTrue(urlEngine != null && !urlEngine.trim().equals(""), "External engine url is not defined!!");
 		urlEngine = resolveRelativeUrls(urlEngine);
 
@@ -887,28 +819,30 @@ public class GeneralUtilities extends SpagoBIUtilities {
 
 		) {
 			// ADD this extension because this is a BackEnd engine invocation
-			urlEngine = urlEngine + backEndExtension;
+			urlEngine = urlEngine + BACKEND_EXTENSION;
 		}
-		logger.debug("OUT: returning " + urlEngine);
+		LOGGER.debug("OUT: returning " + urlEngine);
 		return urlEngine;
 	}
 
 	private static String resolveRelativeUrls(String url) {
-		logger.debug("IN: url = " + url);
+		LOGGER.debug("IN: url = " + url);
 		if (url.startsWith("/")) {
-			logger.debug("Url is relative");
+			LOGGER.debug("Url is relative");
 			String domain = getServiceHostUrl();
-			logger.debug("SpagoBI domain is " + domain);
+			LOGGER.debug("SpagoBI domain is " + domain);
 			url = domain + url;
-			logger.debug("Absolute url is " + url);
+			LOGGER.debug("Absolute url is " + url);
 		}
-		logger.debug("OUT: returning " + url);
+		LOGGER.debug("OUT: returning " + url);
 		return url;
 	}
 
 	public static String getServiceHostUrl() {
-		String serviceURL = SpagoBIUtilities.readJndiResource(SingletonConfig.getInstance().getConfigValue("SPAGOBI.SPAGOBI_SERVICE_JNDI"));
+		String serviceURL = SpagoBIUtilities
+				.readJndiResource(SingletonConfig.getInstance().getConfigValue(SPAGOBI_SPAGOBI_SERVICE_JNDI));
 		serviceURL = serviceURL.substring(0, serviceURL.lastIndexOf('/'));
+
 		return serviceURL;
 	}
 
@@ -929,7 +863,8 @@ public class GeneralUtilities extends SpagoBIUtilities {
 		return sb.toString();
 	}
 
-	public static String getAngularPropertiesFileName(String currLanguage, String currScript, String currCountry, String separator) {
+	public static String getAngularPropertiesFileName(String currLanguage, String currScript, String currCountry,
+			String separator) {
 		Locale locale = new Builder().setLanguage(currLanguage).setRegion(currCountry).setScript(currScript).build();
 		return "/js/lib/angular-localization/" + getAngularPropertiesFileName(locale, separator) + ".js";
 	}
